Missed a forward slash on the JS script href

--- a/demo/index.html
+++ b/demo/index.html
@@ -6,7 +6,7 @@
   <link href="index.css" type="text/css" rel="stylesheet"/>
 
   <script src="jquery-1.11.2.min.js"></script>
-  <script src="..\stcombobox.min.js"></script>
+  <script src="../stcombobox.min.js"></script>
   <script src="index.js"></script>
 </head>
 <body>
